--- a/department-service.properties
+++ b/department-service.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
+
+spring.boot.message=Hello, Department Service
