--- a/employee-service.properties
+++ b/employee-service.properties
@@ -9,3 +9,6 @@ server.port=8082
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
+
+
+spring.boot.message=Hello, Employee Service
