--- a/department-service.properties
+++ b/department-service.properties
@@ -9,4 +9,4 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 
-spring.boot.message=Hello, Department Service Updated
+spring.boot.message=Hello, Department Service Spring Cloud Bus Demo
