--- a/employee-service.properties
+++ b/employee-service.properties
@@ -11,4 +11,4 @@ eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 
 
-spring.boot.message=Hello, Employee Service
+spring.boot.message=Hello, Employee Service Spring Cloud Bus Demo
