--- a/organization-service.properties
+++ b/organization-service.properties
@@ -15,3 +15,9 @@ management.endpoints.web.exposure.include=*
 # Service Registry aware
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
+
+# Integrate with Spring Cloud Bus
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
